Test Org - Speridian/src/objects/Ba_Claim_Experience__c.object
<CustomObject>
    <fields>
        <fullName>Ba_Average_Entrolled_Members__c</fullName>
        <label>Average Entrolled Members</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ba_Average_Entrollment__c</fullName>
        <label>Average Entrollment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ba_Billed_Premium__c</fullName>
        <label>Billed Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ba_Captation__c</fullName>
        <label>Captation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ba_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Prescription/Rx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ba_Claims__c</fullName>
        <label>Claims</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ba_Current_Polling_Point__c</fullName>
        <label>Current Polling Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ba_Experience_Period_From__c</fullName>
        <label>Experience Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ba_Experience_Period_To__c</fullName>
        <label>Experience Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ba_Group__c</fullName>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claim Experience</relationshipLabel>
        <relationshipName>Claim_Experience</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ba_High_Level_Claims__c</fullName>
        <label>High Level Claims</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ba_Number_of_High_Level_Claims__c</fullName>
        <label>Number of High Level Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Claim Experience</label>
    <nameField>
        <label>Claim Experiencee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Experience</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>